--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,15 @@
     --color-warning: #fbbe23;
     --color-error: #f87171;
 }
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+body{
+    max-width: 1000px;
+    margin: auto;
+}
