--- a/css/style.css
+++ b/css/style.css
@@ -18,3 +18,63 @@ body{
     max-width: 1000px;
     margin: auto;
 }
+
+.container {
+    width: 100%;
+    margin: 40px auto 10px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.3);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+}
+
+h2{
+    font-size: 1.5rem;
+    margin-bottom: 30px;
+}
+
+.input-section {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 40px;
+}
+
+.input-section input {
+    margin-right: 10px;
+    width: 100%;
+    border: var(--color-primary) 1px solid;
+    border-radius: 5px;
+    padding: 10px;
+    color: grey;
+}
+
+.input-section input:focus {
+    outline: none;
+    border-width: 2px;
+}
+
+button {
+    background-color: var(--color-primary);
+    border: none;
+    cursor: pointer;
+    padding: 10px 15px;
+    border-radius: 5px;
+}
+
+button:hover {
+    opacity: 0.8;
+}
+
+.todos-operator {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+#delete-all-button {
+    background-color: var(--color-error);
+}
