--- a/css/style.css
+++ b/css/style.css
@@ -78,3 +78,44 @@ button:hover {
 #delete-all-button {
     background-color: var(--color-error);
 }
+
+table {
+    width: 100%;
+}
+
+thead {
+    background-color: var(--color-background);
+}
+
+thead th{
+    padding: 10px;
+}
+
+thead th:first-child {
+    border-top-left-radius: 10px;
+}
+
+thead th:last-child {
+    border-top-right-radius: 10px;
+}
+
+tbody td {
+    background-color: var(--color-task);
+    padding: 5px 10px;
+    text-align: center;
+}
+
+tbody td button {
+    padding: 4px 8px;
+    margin: 2px 5px;
+}
+
+tbody td button:nth-child(1) {
+    background-color: var(--color-warning);
+}
+tbody td button:nth-child(2) {
+    background-color: var(--color-success);
+}
+tbody td button:nth-child(3) {
+    background-color: var(--color-error);
+}
