Implement todo editing feature

--- a/css/style.css
+++ b/css/style.css
@@ -141,3 +141,7 @@ tbody td button:nth-child(3) {
 .alert-error {
     background-color: var(--color-error);
 }
+
+#edit-button {
+    display: none;
+}
