--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,7 @@ tbody td {
     background-color: var(--color-task);
     padding: 5px 10px;
     text-align: center;
+    width: 25%;
 }
 
 tbody td button {
@@ -115,6 +116,7 @@ tbody td button:nth-child(1) {
 }
 tbody td button:nth-child(2) {
     background-color: var(--color-success);
+    width: 48px;
 }
 tbody td button:nth-child(3) {
     background-color: var(--color-error);
